<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.student.uhype.MainActivity">

    <TextView
        android:id="@+id/txtViewAppName"
        android:text="@string/app_name"
        style="@style/TextStylePrimary.AppName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        style="@style/TextStylePrimary.LoginWelcomeNote"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="180dp"
        android:text="@string/app_welcome_note"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:background="@drawable/edit_textbox_style"
        android:hint="@string/email_hint"
        style="@style/EditTextBox"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextPwd"
        android:background="@drawable/edit_textbox_style"
        android:hint="@string/pwd_hint"
        style="@style/EditTextBox"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTxtEmail"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/editTxtEmail"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/CustomButtonStyle"
        android:text="@string/login_btn"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/editTextPwd"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPwd"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPwd"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnCrtAcc"
        style="@style/CustomButtonStyle"
        android:text="@string/create_acc_btn"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/btnLogin"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</android.support.constraint.ConstraintLayout>
